@startuml
enum State {
  ACTIVE
  INACTIVE
}

class Profile {
  String name
  String email
}

class DjangoUser {
  User user
}

class Party {
  String name
  Profile created_by
  State _state
  Integer template_party_id
}

class Food {
  String name
  Decimal price
}

class Membership {
  Integer profile_id
  Integer party_id
  Boolean is_owner
  Decimal total_sponsored
}

class MemberFoodExclude {
  Integer membership_id
  Integer ordered_food_id
}

class OrderedFood {
  Integer party_id
  String food_name
  Decimal price_per_unit
  Integer quantity
}

DjangoUser "1" --- "1" Profile

Profile "1" *-- "many" Membership
Membership "1" *-- "many" MemberFoodExclude
Membership "many" *-- "1" Party
Party "1" --* "many" OrderedFood
Party "1" *-- "1" Profile
TemplateParty "1" --* "many" Party
@enduml